--- a/client/vite-project/src/App.css
+++ b/client/vite-project/src/App.css
@@ -1,5 +1,6 @@
 .App{
   text-align: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .form{
@@ -14,4 +15,30 @@
   width: 300px;
   height: 60px;
   margin: 10px;
+}
+
+.card {
+  align-items: center;
+  width: 500px;
+  height: 110px;
+  border: 2px solid black;
+  border-radius: 15px;
+  margin: 20px auto; 
+  padding: 10px;
+   
+}
+
+.card h1 {
+  font-size: 24px;
+  margin: 0;
+}
+
+.card p {
+  font-size: 18px;
+  margin: 0;
+}
+
+#update{
+  width: 100px;
+  height: 30px;
 }
